--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "antd": "^4.12.3",
+    "axios": "^0.21.1",
+    "json-server": "^0.16.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "recharts": "^2.0.7",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
